Bugzilla bug 249284: removed a duplicate declaration of CERT_DecodeDERCertificate. r=nelsonb. Thanks to Chris Newman of Sun for the bug report.